Se agega mas funcionalidad a funciones para js

--- a/01.EstudioPersonal/06.html-java-css3/Proyectos/funciones.html
+++ b/01.EstudioPersonal/06.html-java-css3/Proyectos/funciones.html
@@ -12,7 +12,7 @@
         alert(y("Hola", "Crayola"));
         alert(z());*/
         
-        alert(yz());
+        //alert(yz());
     </script>
 </head>
 <body>
